# backend/src/main/java/br/com/topsdojob/v3/application/publico/dto/SolicitarAnuncioPublicoRequestDto.java
@@ -3,8 +3,6 @@ package br.com.topsdojob.v3.application.publico.dto;
 import java.math.BigDecimal;
 
 public record SolicitarAnuncioPublicoRequestDto(
-        String nomeExibicao,
-        String email,
         String whatsapp,
         String uf,
         String cidade,
